[gd_scene load_steps=6 format=3 uid="uid://1dqe0g45rivi"]

[ext_resource type="Texture2D" uid="uid://cm0v37sklob7h" path="res://MapsImages/mapVER.png" id="1_fj0yy"]
[ext_resource type="Script" path="res://Scripts/popupMap.gd" id="1_luqnv"]
[ext_resource type="Texture2D" uid="uid://cx7ygv6bm4wsi" path="res://MapsImages/mapDES.png" id="2_ik3hy"]
[ext_resource type="Texture2D" uid="uid://drk7jmeagccp3" path="res://MapsImages/mapNie.png" id="3_8rtws"]
[ext_resource type="FontFile" uid="uid://c0c4myavfhko0" path="res://Fonts/ZeroCool.otf" id="4_gn13d"]

[node name="Popup" type="Popup"]
position = Vector2i(85, 60)
size = Vector2i(985, 518)
visible = true
script = ExtResource("1_luqnv")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.247059, 0.388235, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(930, 460)
offset_left = 25.0
offset_top = 25.0
offset_right = 955.0
offset_bottom = 485.0
color = Color(0, 0, 0, 0.32549)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.5
offset_top = 40.0
offset_right = 95.5
offset_bottom = 124.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_gn13d")
theme_override_font_sizes/font_size = 70
text = "MAPA"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(50, 0)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -92.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="imagesCont" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 31

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/imagesCont"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
texture = ExtResource("1_fj0yy")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/imagesCont"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
texture = ExtResource("2_ik3hy")

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/imagesCont"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
texture = ExtResource("3_8rtws")

[node name="ButtonsCont" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 31

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/ButtonsCont"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gn13d")
theme_override_font_sizes/font_size = 30
text = "BOSQUE"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/ButtonsCont"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gn13d")
theme_override_font_sizes/font_size = 30
text = "DESIERTO"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/ButtonsCont"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gn13d")
theme_override_font_sizes/font_size = 30
text = "NIEVE"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonsCont/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsCont/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonsCont/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsCont/Button2" to="." method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonsCont/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsCont/Button3" to="." method="_on_button_3_pressed"]
